Домашняя работа №11. 1 добавлено хранилище для account 2 реализована процедура регистрации и авторизации с генерацией jwt токена 3 защита роутов авторизацией по jwt токену вида -H 'Authorization: Bearer eyJh...
