# docs/swagger.yaml
@@ -82,6 +82,51 @@ definitions:
     required:
     - title
     type: object
+  handler.AccountItemResponse:
+    properties:
+      result:
+        properties:
+          item:
+            $ref: '#/definitions/model.Account'
+        type: object
+    type: object
+  handler.AccountItemsResponse:
+    properties:
+      result:
+        properties:
+          items:
+            items:
+              $ref: '#/definitions/model.Account'
+            type: array
+        type: object
+    type: object
+  handler.AccountLoginRequest:
+    properties:
+      login:
+        example: ekobzar
+        type: string
+      password:
+        example: "123456"
+        type: string
+    type: object
+  handler.AccountRegisterRequest:
+    properties:
+      first_name:
+        example: Kobzar
+        type: string
+      last_name:
+        example: ""
+        type: string
+      login:
+        example: ekobzar
+        type: string
+      name:
+        example: Evgenij
+        type: string
+      password:
+        example: "123456"
+        type: string
+    type: object
   handler.DeleteResponse:
     properties:
       result:
@@ -150,6 +195,29 @@ definitions:
             type: array
         type: object
     type: object
+  model.Account:
+    properties:
+      created_at:
+        type: string
+      first_name:
+        example: Kobzar
+        type: string
+      id:
+        example: 1
+        type: integer
+      last_name:
+        example: ""
+        type: string
+      login:
+        example: ekobzar
+        type: string
+      name:
+        example: Evgenij
+        type: string
+      password:
+        example: "123456"
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -158,6 +226,109 @@ info:
   title: Serial Catalog API
   version: "1.0"
 paths:
+  /otus.account.delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a account
+      parameters:
+      - description: Account ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.DeleteResponse'
+        "400":
+          description: Not found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete account
+      tags:
+      - accounts
+  /otus.account.get/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get detailed information about a account
+      parameters:
+      - description: Account ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved account
+          schema:
+            $ref: '#/definitions/handler.AccountItemResponse'
+        "400":
+          description: Not found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: Get account by ID
+      tags:
+      - accounts
+  /otus.account.list:
+    get:
+      consumes:
+      - application/json
+      description: Get list information about account
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved account
+          schema:
+            $ref: '#/definitions/handler.AccountItemsResponse'
+      summary: Get accounts
+      tags:
+      - accounts
+  /otus.account.login:
+    post:
+      consumes:
+      - application/json
+      description: Get token by UserName
+      parameters:
+      - description: Account data
+        in: body
+        name: account
+        required: true
+        schema:
+          $ref: '#/definitions/handler.AccountLoginRequest'
+      produces:
+      - application/json
+      responses: {}
+      summary: Get token by UserName
+      tags:
+      - accounts
+  /otus.account.register:
+    post:
+      consumes:
+      - application/json
+      description: Add a new account
+      parameters:
+      - description: Account data
+        in: body
+        name: account
+        required: true
+        schema:
+          $ref: '#/definitions/handler.AccountRegisterRequest'
+      produces:
+      - application/json
+      responses: {}
+      summary: Register new account
+      tags:
+      - accounts
   /otus.episode.add:
     post:
       consumes:
